--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  background-color: #f5f5f5;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +9,43 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  font-size: 14px;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 64;
+  background-color: #fff;
+  z-index: 1000;
+}
+
+.header h1 {
+  margin: 0;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 64px;
+  margin-left: 16px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.sidebar {
+  position: fixed;
+  left: 0;
+  top: 64px;
+  width: 160px;
+  bottom: 0;
+  background-color: #fff;
+}
+
+.sidebar.p-menu {
+  border: none;
+  width: 160px;
 }
