--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,16 @@
 body {
   margin: 0;
   background-color: #f5f5f5;
-
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
 html {
@@ -18,7 +22,7 @@ html {
   top: 0;
   left: 0;
   right: 0;
-  height: 64;
+  height: 64px;
   background-color: #fff;
   z-index: 1000;
 }
@@ -31,11 +35,6 @@ html {
   margin-left: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 .sidebar {
   position: fixed;
   left: 0;
@@ -45,7 +44,12 @@ code {
   background-color: #fff;
 }
 
-.sidebar.p-menu {
-  border: none;
+.sidebar h3 {
+  margin-left: 16px;
+}
+
+.sidebar .p-menu {
+  border: 0;
   width: 160px;
+  position: relative;
 }
