Foto Produto React

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -111,3 +111,19 @@ html {
   background-color: #fff;
   border-radius: 4px;
 }
+
+.image-display-wrapper {
+  width: 256px;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.image-display {
+  max-width: 100%;
+}
+
+.icon-display.pi {
+  font-size: 128px;
+  display: inline-block;
+  color: #2478dd;
+}
