--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -127,3 +127,21 @@ html {
   display: inline-block;
   color: #2478dd;
 }
+
+.error-page {
+  width: 600px;
+  padding: 32px;
+  text-align: center;
+  border-radius: 8px;
+  background-color: #fff;
+  margin: 32px auto;
+}
+
+.error-page h1 {
+  margin: 0;
+  margin-bottom: 8px;
+}
+
+.error-page h3 {
+  font-weight: normal;
+}
